--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -11,4 +11,9 @@
       <Compile Remove="Game.cs" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="JetBrains.Annotations" Version="2024.2.0" />
+      <PackageReference Include="MSTest.TestFramework" Version="3.6.0" />
+    </ItemGroup>
+
 </Project>
